# priviblur

./: .gitignore  README.md  config.example.toml  docker-compose.yml  instances.md  pyproject.toml  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: generate-static-locale-data.yml  priviblur-ci.yml  publish-ghcr.yml  release-docker.yml
assets/: base-layouts.css  base-post-layout.css  base.css  post-layout.css
assets/css/: base.css  blog.css  post-layout.css  post.css  settings.css  timeline.css
assets/js/: base.js  interaction.js  post.js  settings.js
docker/: Dockerfile
locales/: privblur.pot  priviblur.pot
src/: preferences.py  server.py  version.py
src/cache/: __init__.py  base.py  blogs.py  explore.py  notes.py  poll_results.py  search.py  tagged.py
src/config/: __init__.py  base.py  cache_config.py  deployment.py  logging_config.py  misc.py  priviblur_backend.py  user_preferences.py
src/error_handlers/: _base.py  extractor_errors.py  miscellaneous_errors.py
src/exceptions/: exceptions.py
src/helpers/: error_handlers.py  ext_npf_renderer.py  helpers.py  i18n.py  i18n_data.py  pool_timeout_tracker.py  render.py  setup_logging.py
src/i18n/: __init__.py  i18n.py  i18n_data.py  npf_renderer_localizer.py
src/jobs/: refresh_pool.py
src/privblur_extractor/: __init__.py  parsers.py
src/priviblur_extractor/: __init__.py  parsers.py
src/routes/: __init__.py  assets.py  blogs.py  explore.py  media.py  miscellaneous.py  search.py  settings.py  tagged.py
src/templates/: base.jinja  blog.jinja  blog_post.jinja  search.jinja  (+4 more)
(+130 files in other folders)
