[project]
name = "privblur"
requires-python = ">=3.10"
dependencies = [
    "sanic[ext] == 23.3.0",
    "orjson == 3.8.0",
    "aiohttp == 3.8.3",
    "babel",
    "privblur-extractor",
    "npf_renderer == 0.6.0"
]

dynamic=["version"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "version.PROJECT_VERSION"}
