[project]
name = "privblur"
requires-python = ">=3.11"
dependencies = [
    "sanic[ext] == 23.3.0",
    "orjson == 3.8.0",
    "aiohttp == 3.8.3",
    "babel",
    "jinja2==3.1.2",
    "npf_renderer == 0.7.0"
]

[project.optional-dependencies]
dev = ["prettyprinter==0.18.0"]

dynamic=["version"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "version.PROJECT_VERSION"}
