[project]
name = "privblur"
requires-python = ">=3.11"
dependencies = [
    "sanic[ext] == 23.3.0",
    "orjson == 3.8.0",
    "httpx[http2]==0.25.0",
    "babel == 2.13.1",
    "jinja2==3.1.2",
    "npf-renderer == 0.9.0"
]

dynamic=["version"]

[project.optional-dependencies]
dev = ["prettyprinter==0.18.0"]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "version.PROJECT_VERSION"}
